Fix right alignment in medium view

--- a/projects/plugins/jetpack/scss/jetpack-recommendations-banner.scss
+++ b/projects/plugins/jetpack/scss/jetpack-recommendations-banner.scss
@@ -39,6 +39,10 @@
 
 	padding-right: 48px;
 
+	@include breakpoint( '<660px' ) {
+		padding-right: 32px;
+	}
+
 	@include breakpoint( '<480px' ) {
 		padding-right: 16px;
 	}
